--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@ sexual y la violencia de genero hacia las mujeres en el transporte público, en 
     <string name="title_activity_hazme_el_paro">HazmeElParoActivity</string>
     <string name="title_section1">HazmeElParo</string>
     <string name="title_section2">Contacto</string>
-    <string name="title_section3">AcercaDe</string>
+    <string name="title_section3">Configuración</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
@@ -48,4 +48,9 @@ sexual y la violencia de genero hacia las mujeres en el transporte público, en 
     <string name="gracias_por_compartir_banda">Para obtener la contraseña la próxima vez que hagas un viaje, solo da clic en CONECTA.</string>
     <!-- conectar -->
     <string name="Pagina_liked">En un momento te enviaremos la contraseña</string>
+
+    <string name="texto_config">Aquí puedes modificar las opciones de como funciona la app y a quiénes reportaremos.</string>
+    <string name="llamar_a_tu_contacto">¿Te gustaría enviar un mensaje al contacto que configuraste si llegas a tener un incidente (acoso sexual o violencia de genero)?</string>
+    <string name="llamar_a_tu_cas">¿Te gustaría llamar automaticamente a la POLICIA en caso de tener un incidente?</string>
+    <string name="llamar_a_al_mando">¿Te gustaría avisarle al chofer de la unidad?, El tiene un protocolo de acción y sabrá como ayudarte.</string>
 </resources>
